Fix Convos component on mobile

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -152,6 +152,17 @@ h6 {
     width: 55%;
   }
 
+  // @include responsive(phone) {
+  //   width: 100%;
+  //   height: 100%;
+
+  //   .back-arrow {
+  //     display: block;
+  //   }
+  // }
+}
+
+.chat.active {
   @include responsive(phone) {
     width: 100%;
     height: 100%;
@@ -508,7 +519,8 @@ h6 {
   font-size: 1.4rem;
   line-height: 1.3;
   border-radius: 10px;
-  padding: 0.7rem 4.2rem 0.7rem 1rem;
+  // padding: 0.7rem 4.2rem 0.7rem 1rem;
+  padding: 0.7rem 1rem;
   max-width: max-content;
   background-color: $color-tertiary;
 }
